# fastapi-sample

./: .env.template  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 9ee75a0ee88d_create_user.py  b69ea4f47c4b_create_post.py
config/: database.py  settings.py
cruds/: post.py  user.py
gql/: __init__.py  schema.py  types.py
models/: post.py  user.py
routers/: authentication.py  user.py  users.py
schemas/: __init__.py  post.py  user.py
services/: create_user.py
utils/: authentication.py  cognito.py
